[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"                # â† upgrade here
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
bs58 = "0.5"
base64 = "0.22"
thiserror = "2.0"
tower = "0.5"

